--- a/gb/19/11/12/n11650220.md
+++ b/gb/19/11/12/n11650220.md
@@ -1,69 +1,65 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/gzhsl204/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/gzhsl204/djy/blob/master/gb/n24hr.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/gzhsl204/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/gzhsl204/djy/blob/master/gb/news392.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/gzhsl204/djy/blob/master/gb/news2007.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/gzhsl204/djy/blob/master/gb/news2008.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/gzhsl204/djy/blob/master/gb/ncyule.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/gzhsl204/djy/blob/master/gb/nsc1002.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/gzhsl204/djy/blob/master/gb/9p.md#1">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/gzhsl204/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/gzhsl204/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/gzhsl204/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/gzhsl204/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ | <a target="_blank" href="https://github.com/gzhsl204/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/gzhsl204/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/gzhsl204/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/gzhsl204/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/gzhsl204/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/gzhsl204/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/gzhsl204/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/gzhsl204/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/gzhsl204/www/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/gzhsl204/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/gzhsl204/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/gzhsl204/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/gzhsl204/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/gzhsl204/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/gzhsl204/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/gzhsl204/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/gzhsl204/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/gzhsl204/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/gzhsl204/ntdtv/blob/master/gb/prog1530_1.md#1">ºÍÆ½¿¹Òé</a> | <a target="_blank" href="https://github.com/gzhsl204/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/gzhsl204/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/gzhsl204/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/gzhsl204/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>»ðÑÌ¹ýº£ ÐÂÎ÷À¼ÔöÅÉ21ÃûÏû·ÀÔ±Öú°ÄÃð»ð</h2>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒ"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="è¯„è®º"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="æ–‡åŒ–"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="ç”Ÿæ´»"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="å¨±ä¹"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="å¥åº·"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="è´­ç‰©"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="ææ¬¾"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">ç¿»å¢™</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">å’Œå¹³æŠ—è®®</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>ç«çƒŸè¿‡æµ· æ–°è¥¿å…°å¢žæ´¾21åæ¶ˆé˜²å‘˜åŠ©æ¾³ç­ç«</h2>
 
 <h6></h6>
 <hr>
-<p>¡¾´ó¼ÍÔª2019Äê11ÔÂ12ÈÕÑ¶¡¿£¨´ó¼ÍÔª¼ÇÕßÌìî£<a href="https://github.com/gzhsl204/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md">°ÄÖÞ</a>Ï¤Äá±àÒë±¨µ¼£©°ÄÖÞ¶«º£°¶<a href="https://github.com/gzhsl204/djy/blob/master/gb/tag/%E5%B1%B1%E7%81%AB.md">É½»ð</a>µÄÑÌÎíÒÑ¾­Æ®µ½ÐÂÎ÷À¼ÉÏ¿Õ¡£ÔÚÐÂÖÝºÍÀ¥ÖÝÔâÓöÊ·ÎÞÇ°ÀýµÄ´ó¹æÄ£É½»ðÖ®¼Ê£¬ÐÂÎ÷À¼Éì³öÔ®ÊÖ£¬ÔöÅÉ21ÃûÐÂÎ÷À¼<a href="https://github.com/gzhsl204/djy/blob/master/gb/tag/%E6%B6%88%E9%98%B2%E5%91%98.md">Ïû·ÀÔ±</a>¸Ï¸°À¥ÖÝ»ð³¡°ïÖú<a href="https://github.com/gzhsl204/djy/blob/master/gb/tag/%E7%81%AD%E7%81%AB.md">Ãð»ð</a>¡£</p>
-<p>ÖÜÒ»£¬ÒÑ¾­ÓÐ6ÃûÐÂÎ÷À¼<a href="https://github.com/gzhsl204/djy/blob/master/gb/tag/%E6%B6%88%E9%98%B2%E5%91%98.md">Ïû·ÀÔ±</a>À´µ½<a href="https://github.com/gzhsl204/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md">°ÄÖÞ</a>¶«º£°¶²Î¼Ó<a href="https://github.com/gzhsl204/djy/blob/master/gb/tag/%E7%81%AD%E7%81%AB.md">Ãð»ð</a>¡£ÐÂÎ÷À¼Ïû·À¾ÈÔ®¸ºÔðÈËÌØÄÉ£¨Paul Turner£©Ëµ£¬ÕâÐ©ÈË¶¼ÊÇ¿ÕÖÐÃð»ð¡¢ÖØÐÍ»úÐµ²Ù×÷¡¢°²È«ºÍÈËÔ±µ÷ÅÉ·½ÃæµÄ×¨¼Ò¡£</p>
-<p>ÖÜ¶þ£¬ÐÂÎ÷À¼×ÜÀí°¢µÂ¶÷£¨Jacinda Ardern£©Ðû²¼£¬½«ÔÙÅÉ21ÃûÏû·ÀÔ±¸Ï¸°°ÄÖÞ»ð³¡£¬²¢ºÍ°ÄÖÞ×ÜÀíÄªÀïÉ­¾Í»ðÇé·¢Õ¹±£³ÖÃÜÇÐÁªÏµ¡£</p>
-<p>ÐÂµÄ¾ÈÔ®¶Ó°üÀ¨6¸öÈýÈË¾ÈÔ®¶ÓºÍ3Ãû¶Ó³¤£¬ËûÃÇ½«ÓÚÖÜÈý¸Ï¸°»ð³¡¡£</p>
-<p>°¢µÂ¶÷±íÊ¾£¬ÔÚ»ð³¡³¤Ê±¼ä·ÜÕ½µÄÏû·ÀÔ±ÏÔÈ»»áÆ£±¹£¬ÐÂÎ÷À¼Ïû·ÀÔ±»á½«ËûÃÇÌæ»»ÏÂÀ´£¬»º½âÒ»Ð©»ð³¡µÄÈËÔ±Ñ¹Á¦¡£</p>
-<p>ÐÂÎ÷À¼Íâ½»²¿³¤Æ¤ÌØË¹£¨Winston Peters£©±íÊ¾£¬Èç¹û°ÄÖÞÐèÒª£¬ËûÃÇ»á½øÒ»²½Ìá¹©Ô®Öú¡£¡°ÎÒÃÇ½«ÏòÐÂÖÝºÍÀ¥ÖÝÕþ¸®Ã÷È·±íÊ¾£¬ÎÒÃÇ»á¾¡¿ÉÄÜÌá¹©°ïÖú¡£¡±</p>
-<p>°ÄÖÞ<a href="https://github.com/gzhsl204/djy/blob/master/gb/tag/%E5%B1%B1%E7%81%AB.md">É½»ð</a>É¢·¢³ö´óÁ¿Å¨ÑÌ£¬ÒÑ¾­´©Ô½ËþË¹Âüº£Æ®µ½ÁËÐÂÎ÷À¼¡£</p>
-<p>ÐÂÎ÷À¼ÆøÏóÑ§¼Ò¸ñÀ­Î÷£¨Stephen Glassey£©±íÊ¾£¬ËûÓÐ½ü10ÄêÊ±¼äÃ»ÓÐ¼û¹ý°ÄÖÞÉ½»ðµÄÑÌÎíÆ®µ½ÐÂÎ÷À¼µÄ³¡¾°¡£¡°ËäÈ»ÕâÒÔÇ°·¢Éú¹ý£¬µ«È´ºÜº±¼û¡£ÓÐÊ±ºò£¬ÎÒÃÇ»á¿´µ½É³³¾±©´ÓËþË¹Âüº£ÉÏÆ®¹ýÀ´¡£¡±</p>
-<p>Ëû»¹±íÊ¾£¬Ä¿Ç°Ã»ÓÐ·¢ÏÖÕâÐ©ÑÌÎí»á¶ÔÐÂÎ÷À¼ÈËµÄ½¡¿µ²úÉúÓ°Ïì¡£</p>
-<p>ÔðÈÎ±à¼­£ºÔÀÃ÷</p>
+<p>ã€å¤§çºªå…ƒ2019å¹´11æœˆ12æ—¥è®¯ã€‘ï¼ˆå¤§çºªå…ƒè®°è€…å¤©ç¿<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">æ¾³æ´²</a>æ‚‰å°¼ç¼–è¯‘æŠ¥å¯¼ï¼‰æ¾³æ´²ä¸œæµ·å²¸<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%B1%B1%E7%81%AB.md#1">å±±ç«</a>çš„çƒŸé›¾å·²ç»é£˜åˆ°æ–°è¥¿å…°ä¸Šç©ºã€‚åœ¨æ–°å·žå’Œæ˜†å·žé­é‡å²æ— å‰ä¾‹çš„å¤§è§„æ¨¡å±±ç«ä¹‹é™…ï¼Œæ–°è¥¿å…°ä¼¸å‡ºæ´æ‰‹ï¼Œå¢žæ´¾21åæ–°è¥¿å…°<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%B6%88%E9%98%B2%E5%91%98.md#1">æ¶ˆé˜²å‘˜</a>èµ¶èµ´æ˜†å·žç«åœºå¸®åŠ©<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E7%81%AD%E7%81%AB.md#1">ç­ç«</a>ã€‚</p>
+<p>å‘¨ä¸€ï¼Œå·²ç»æœ‰6åæ–°è¥¿å…°<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%B6%88%E9%98%B2%E5%91%98.md#1">æ¶ˆé˜²å‘˜</a>æ¥åˆ°<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">æ¾³æ´²</a>ä¸œæµ·å²¸å‚åŠ <ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E7%81%AD%E7%81%AB.md#1">ç­ç«</a>ã€‚æ–°è¥¿å…°æ¶ˆé˜²æ•‘æ´è´Ÿè´£äººç‰¹çº³ï¼ˆPaul Turnerï¼‰è¯´ï¼Œè¿™äº›äººéƒ½æ˜¯ç©ºä¸­ç­ç«ã€é‡åž‹æœºæ¢°æ“ä½œã€å®‰å…¨å’Œäººå‘˜è°ƒæ´¾æ–¹é¢çš„ä¸“å®¶ã€‚</p>
+<p>å‘¨äºŒï¼Œæ–°è¥¿å…°æ€»ç†é˜¿å¾·æ©ï¼ˆJacinda Ardernï¼‰å®£å¸ƒï¼Œå°†å†æ´¾21åæ¶ˆé˜²å‘˜èµ¶èµ´æ¾³æ´²ç«åœºï¼Œå¹¶å’Œæ¾³æ´²æ€»ç†èŽ«é‡Œæ£®å°±ç«æƒ…å‘å±•ä¿æŒå¯†åˆ‡è”ç³»ã€‚</p>
+<p>æ–°çš„æ•‘æ´é˜ŸåŒ…æ‹¬6ä¸ªä¸‰äººæ•‘æ´é˜Ÿå’Œ3åé˜Ÿé•¿ï¼Œä»–ä»¬å°†äºŽå‘¨ä¸‰èµ¶èµ´ç«åœºã€‚</p>
+<p>é˜¿å¾·æ©è¡¨ç¤ºï¼Œåœ¨ç«åœºé•¿æ—¶é—´å¥‹æˆ˜çš„æ¶ˆé˜²å‘˜æ˜¾ç„¶ä¼šç–²æƒ«ï¼Œæ–°è¥¿å…°æ¶ˆé˜²å‘˜ä¼šå°†ä»–ä»¬æ›¿æ¢ä¸‹æ¥ï¼Œç¼“è§£ä¸€äº›ç«åœºçš„äººå‘˜åŽ‹åŠ›ã€‚</p>
+<p>æ–°è¥¿å…°å¤–äº¤éƒ¨é•¿çš®ç‰¹æ–¯ï¼ˆWinston Petersï¼‰è¡¨ç¤ºï¼Œå¦‚æžœæ¾³æ´²éœ€è¦ï¼Œä»–ä»¬ä¼šè¿›ä¸€æ­¥æä¾›æ´åŠ©ã€‚â€œæˆ‘ä»¬å°†å‘æ–°å·žå’Œæ˜†å·žæ”¿åºœæ˜Žç¡®è¡¨ç¤ºï¼Œæˆ‘ä»¬ä¼šå°½å¯èƒ½æä¾›å¸®åŠ©ã€‚â€</p>
+<p>æ¾³æ´²<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%B1%B1%E7%81%AB.md#1">å±±ç«</a>æ•£å‘å‡ºå¤§é‡æµ“çƒŸï¼Œå·²ç»ç©¿è¶Šå¡”æ–¯æ›¼æµ·é£˜åˆ°äº†æ–°è¥¿å…°ã€‚</p>
+<p>æ–°è¥¿å…°æ°”è±¡å­¦å®¶æ ¼æ‹‰è¥¿ï¼ˆStephen Glasseyï¼‰è¡¨ç¤ºï¼Œä»–æœ‰è¿‘10å¹´æ—¶é—´æ²¡æœ‰è§è¿‡æ¾³æ´²å±±ç«çš„çƒŸé›¾é£˜åˆ°æ–°è¥¿å…°çš„åœºæ™¯ã€‚â€œè™½ç„¶è¿™ä»¥å‰å‘ç”Ÿè¿‡ï¼Œä½†å´å¾ˆç½•è§ã€‚æœ‰æ—¶å€™ï¼Œæˆ‘ä»¬ä¼šçœ‹åˆ°æ²™å°˜æš´ä»Žå¡”æ–¯æ›¼æµ·ä¸Šé£˜è¿‡æ¥ã€‚â€</p>
+<p>ä»–è¿˜è¡¨ç¤ºï¼Œç›®å‰æ²¡æœ‰å‘çŽ°è¿™äº›çƒŸé›¾ä¼šå¯¹æ–°è¥¿å…°äººçš„å¥åº·äº§ç”Ÿå½±å“ã€‚</p>
+<p>è´£ä»»ç¼–è¾‘ï¼šå²³æ˜Ž</p>
 <p>&nbsp;</p>
 
 <hr>
 
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/11/12/n11650220.htm">»ðÑÌ¹ýº£ ÐÂÎ÷À¼ÔöÅÉ21ÃûÏû·ÀÔ±Öú°ÄÃð»ð</a>
 
-
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/11/11/n11646963.htm">É½»ðÍþÐ²¡°ÔÖÄÑ¡±¼¶ ÐÂÖÝÐû²¼½øÈë½ô¼±×´Ì¬</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/1/n11626422.htm">¼«¶ËÌìÆøÔÚ°ÄÖÞ¸÷µØµÇ³¡ Õþ¸®·¢²¼Ïø´­Ô¤¾¯</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/30/n11621529.htm">ÐÂÖÝÉ½»ðÊ§¿Ø Ï¤ÄáÉÏ¿Õ½üÈÕ¿Ö»áÑÌÎíÁýÕÖ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/10/n11581357.htm">ÐÂÖÝ¶«±±É½»ðÒÑ¶áÁ½Ãü ·Ù»Ù40Íò¹«ÇêÍÁµØ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/8/n11575480.htm">ÐÂÖÝ±±²¿±©·¢É½»ð Ç¿·çÏÂ»ðÊÆÃÍÁÐÊ§¿Ø</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/9/n11509328.htm">ÐÂÖÝ½ü50´¦É½»ðËÁÅ° 5Õ¬·Ù»Ù Ò»ÈËÉÕÉË</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/3/6/n11092150.htm">Î¬ÖÝÉ½»ðÑê¼°40Óà³ÇÕò 4Íò¹«ÇêÁÖµØ±»»Ù</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/2/14/n11044141.htm">°Ä´óÀûÑÇÐÂÖÝ±±²¿É½»ðÉÕ »Ù½ü2Íò¹«ÇêÁÖµØ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/2/13/n11041698.htm">ÐÂÖÝ±±²¿Ð¡ÕòÔâÉ½»ðËÁÅ° ÎåËù×¡·¿±»ÉÕ»Ù</a></li>
-
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/11/11/n11647497.htm">Êµµ¯¿ªÇ¹ÉäÖÐ¿¹ÕùÕßµÄ¾¯²ì¹Ø¼ÒÈÙ±»Æðµ×</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/11/n11646485.htm">¾¯²ìÁ¬¿ªÈýÇ¹Ò»ÈËÖÐµ¯ Ïã¸ÛÈý°Õ·éÑÌËÄÆð</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/11/n11647732.htm">¸Û¾¯Êµµ¯¿ªÇ¹ ¹ú¼ÊÇ´Ôð£ºÌì°²ÃÅÊÂ¼þÔÙÏÖ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/11/n11649096.htm">Ë«Ê®Ò»¾ªÈËÊý×Ö±³ºó Ïû·ÑÉý¼¶»¹ÊÇ½µ¼¶£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/21/n11602738.htm">¡¾ÃüÀí¡¿ÎªºÎË«°ûÌ¥ÐÖµÜÃüÔË»á²»ÏàÍ¬£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/15/4/21/n4416242.htm">Ôã¿·Ö®ÆÞ²»ÏÂÌÃ ¹ÅÈËÊÓ»éÒöÎªÈËÂ×Ö®±¾</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/31/n11625562.htm">¡¾²Å×Ó¼ÑÈË¡¿½èººÈËÉí·Ý¼ÞÇ¬Â¡ÔøËïµÄÂúÇå²ÅÅ®</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/30/n11623041.htm">¡¾ÀúÊ·»Øíø¡¿ÀúÊ·ÑéÖ¤ÁËÇ®ÄÂ¶ÔÖÐ¹²µÄÔ¤ÑÔ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/2/n11628520.htm">Ì¸ÅÐ²»Ö»ÌÖ¼Û»¹¼Û ÕæÕý·¢»Ó×÷ÓÃµÄÈýÖÖÌ¸ÅÐÁ¦</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/3/n11630115.htm">µ£ÓÇÍ½Ôö·³ÄÕ ±§Ô¹ÖÚÅÑÇ×Àë</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/11/n11647610.htm">Áã·ÏÆú´ïÈË»ù±¾¹¦ ¸Ä±äÏ°¹ßÖ»Ðè14Ìì</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/11/n11648458.htm">¶àÂ×¶à¿ÕÖÃ¹«Ô¢ÓÐ¶àÉÙ£¿·Ç¹Ù·½Êý¾Ý¾ªÈË</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/4/n11633216.htm">ÄãµÄÏ¸°ûµçÁ¦±ÈÉÁµçÇ¿£¿ÈËÌåµçÄÜÓë½¡¿µ°ÂÃØ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/11/n11648316.htm">¸Û·À±©¾¯´³Èë´óÑ§ËÑ²¶Ñ§Éú Ñ§½çÍ´Åú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/11/n11649028.htm">ÕÅÈñ£ºÖÐ¹²²Ù¿ØÏÂ£¬Ïã¸Û¡°ºÚ¾¯¡±¶ñÐÐÖª¶àÉÙ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/11/n11648791.htm">¡¾ÐÂÎÅ¿´µã¡¿¸ÛÈËÈý°Õ ¸Û¾¯·è¿ñ¿ªÇ¹ÓÖ×²ÈË</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/10/n11646181.htm">³öÌÓÐÌ¾¯¶Ó³¤Ö¤Êµ ÖÐ¹²ÌØ¾¯ÔÚ¸ÛÊµÊ©ÕòÑ¹</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/10/n11645886.htm">ÂíÔÆÔÙÌ¸ºó»Ú´´°¢Àï°Í°Í »òÊÂ³öÓÐÒò</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/8/n11641005.htm">¡¾Ö±²¥»Ø·Å¡¿11.10¸ÛÈËÔÙµ¿ÖÜè÷ÀÖ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/10/n11646097.htm">»ÆÏþÃ÷Ê×¶È»ØÓ¦»é±ä´«ÎÅ ÕâÒ»´ÎÖÕÓÚÕæÏà´ó°×</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/10/n11645023.htm">µ±º«¹úÏ±ÈýÄê ÌìÐÄÊ×ÆØº«·çÌðÃÛ»éÕÕ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/9/n11644225.htm">¡¶¾öÕ½ÖÐÍ¾µº¡·Ó°ÆÀ£º¶þÕ½¾­µäÕ½ÒÛ¾«²Ê»¹Ô­£¡</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/9/n11644322.htm">MomoÉúÈÕÇ××Ô×öµ°¸â ÓëÄÈçö×Óè¤Ì¸TWICEÒþÓÇ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/10/n11645222.htm">ºÅÕÙÈºÑÝÅÜÂíÀ­ËÉ ·½ÎÄÁÕ£ºÒ²Îª°ûµÜÒÅÔ¸¶øÅÜ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/21/n11602738.htm">¡¾ÃüÀí¡¿ÎªºÎË«°ûÌ¥ÐÖµÜÃüÔË»á²»ÏàÍ¬£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/15/4/21/n4416242.htm">Ôã¿·Ö®ÆÞ²»ÏÂÌÃ ¹ÅÈËÊÓ»éÒöÎªÈËÂ×Ö®±¾</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/31/n11625562.htm">¡¾²Å×Ó¼ÑÈË¡¿½èººÈËÉí·Ý¼ÞÇ¬Â¡ÔøËïµÄÂúÇå²ÅÅ®</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/4/16/n10309074.htm">¡¾Ãû¾ä¹ÊÊÂ¡¿´óÊ÷½«¾ü</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/30/n11623041.htm">¡¾ÀúÊ·»Øíø¡¿ÀúÊ·ÑéÖ¤ÁËÇ®ÄÂ¶ÔÖÐ¹²µÄÔ¤ÑÔ</a></li>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/11/11/n11646963.md#1">å±±ç«å¨èƒâ€œç¾éš¾â€çº§ æ–°å·žå®£å¸ƒè¿›å…¥ç´§æ€¥çŠ¶æ€</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/11/1/n11626422.md#1">æžç«¯å¤©æ°”åœ¨æ¾³æ´²å„åœ°ç™»åœº æ”¿åºœå‘å¸ƒå“®å–˜é¢„è­¦</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/10/30/n11621529.md#1">æ–°å·žå±±ç«å¤±æŽ§ æ‚‰å°¼ä¸Šç©ºè¿‘æ—¥æä¼šçƒŸé›¾ç¬¼ç½©</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/10/10/n11581357.md#1">æ–°å·žä¸œåŒ—å±±ç«å·²å¤ºä¸¤å‘½ ç„šæ¯40ä¸‡å…¬é¡·åœŸåœ°</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/10/8/n11575480.md#1">æ–°å·žåŒ—éƒ¨æš´å‘å±±ç« å¼ºé£Žä¸‹ç«åŠ¿çŒ›åˆ—å¤±æŽ§</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/9/9/n11509328.md#1">æ–°å·žè¿‘50å¤„å±±ç«è‚†è™ 5å®…ç„šæ¯ ä¸€äººçƒ§ä¼¤</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/3/6/n11092150.md#1">ç»´å·žå±±ç«æ®ƒåŠ40ä½™åŸŽé•‡ 4ä¸‡å…¬é¡·æž—åœ°è¢«æ¯</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/2/14/n11044141.md#1">æ¾³å¤§åˆ©äºšæ–°å·žåŒ—éƒ¨å±±ç«çƒ§ æ¯è¿‘2ä¸‡å…¬é¡·æž—åœ°</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/2/13/n11041698.md#1">æ–°å·žåŒ—éƒ¨å°é•‡é­å±±ç«è‚†è™ äº”æ‰€ä½æˆ¿è¢«çƒ§æ¯</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/gzhsl204/djy/blob/master/gb/19/11/12/n11650220.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/gzhsl204/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/gzhsl204/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/gzhsl204/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/gzhsl204/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/gzhsl204/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/gzhsl204/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/gzhsl204/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/gzhsl204/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/gzhsl204/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/gzhsl204/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/gzhsl204/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/gzhsl204/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/gzhsl204/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/gzhsl204/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/gzhsl204/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/gzhsl204/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/gzhsl204/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/gzhsl204/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/gzhsl204/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/gzhsl204/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/gzhsl204/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/gzhsl204/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/gzhsl204/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/gzhsl204/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">ã€æœ€æ–°ç–«æƒ…3.13ã€‘å·æ™®ï¼šæˆ‘å’Œä¹ éƒ½çŸ¥ç—…æ¯’æ¥æº</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/28/n10878489.md#1" target="_blank">å…±äº§æš´æ”¿å½•ï¼šæ–‡é©ä¸­æ•™å¸ˆæ ¡é•¿è¢«æ‰“æ­»</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">å…³æ³¨3äº¿äººä¸‰é€€</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/17/n11390870.md#1" target="_blank">èƒ¡å¹³ï¼š20å¹´çƒˆç« æ³•è½®åŠŸå±¹ç«‹ä¸å€’æˆâ€œçœŸé‡‘â€</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943071.md#1">ã€çŽ°åœºè§†é¢‘ã€‘æ­¦æ±‰åŒ»ç”Ÿæ­ä¸­å…±å…³é—­æ–¹èˆ±å†…å¹•</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942593.md#1">ã€ç–«æƒ…é€è§†ã€‘æ¸¯æŠ—ç–«æ˜¾å¥‡è¿¹ å¤©ç­ä¸­å…±æˆä¿å‘½ç¬¦</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943372.md#1">â€œå›žå›½é¿ç–«â€å’Œâ€œä¸­å›½å¼æ’¤ä¾¨â€çš„çœŸç›¸</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942860.md#1">ã€æœ€æ–°ç–«æƒ…3.16ã€‘æ—§é‡‘å±±åœ°åŒº700ä¸‡äººå±…å®¶é˜²ç–«</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">å¤ä»Šä¸­å¤–é¢„è¨€ä¸­çš„2020å¹´</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">ä¸­å›½ç­‰å›½ä¸ºä½•ç–«æƒ…ä¸¥é‡ï¼ŸçŠ¹å¤ªæ‹‰æ¯”ï¼šç¥žåœ¨é™¤æ¶</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/29/n11905232.md#1">è—è™«ç¾¤æ”»å®˜åºœå¼‚è±¡ ä¸ºä½•åƒå°½ç”»åƒäººå¤´ï¼Ÿ</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11925830.md#1">è¢«æ‰’çš®çš„æ³•å®˜</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942589.md#1">èµµç«‹åšç”©é”…ç—…æ¯’æºè‡ªç¾Žå›½ è‰ºäººé»„ç§‹ç”Ÿç‹ é…¸ä¸­å…±</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942781.md#1">æ½˜è¿Žç´«å‘¼å¸é“æ„ŸæŸ“æ€¥å°±åŒ» è¢«è¦æ±‚æ£€æµ‹æ–°å† ç—…æ¯’</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942415.md#1">è¥¿ç­ç‰™ç–«æƒ…å¤§çˆ†å‘ æ¢å’çªä¸€å®¶ä¸‰å£å°åŸŽå‰è¿”æ¸¯</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943288.md#1">å¤å·¨åŸºå®£å¸ƒå½“çˆ¸ æ™’å®å®åˆç…§åˆ†äº«å–œæ‚¦</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943213.md#1">åˆä¸€å¥½èŽ±åžæ˜Žæ˜Ÿç¡®è¯Š 007é‚¦å¥³éƒŽéš”ç¦»åœ¨å®¶</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11944883.md#1">ã€èƒ¡ä¹ƒæ–‡å¼€è®²ã€‘ç™½ç²¥æ²»å’³æŠ—æ„Ÿå†’ï¼5ç§ç¥žå¥‡é£Ÿç–—æ–¹ æ­¢å’³å¾ˆå®žç”¨</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11945071.md#1">ã€æ–°é—»çœ‹ç‚¹ã€‘å®˜åª’å¿™é™æ¸©ï¼Ÿèµµç«‹åšåŠäº”æ¯›è¢«æ‰“è„¸</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11941189.md#1">ã€ä¸€çº¿é‡‡è®¿è§†é¢‘ç‰ˆã€‘æ­¦æ±‰å¸‚æ°‘ï¼šé¦–å…ˆè¦æ´»ä¸‹æ¥</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942373.md#1">å›¾è¯è—è™«å¤§å†›è‚†è™ ä¸­å…±æ€¥å®šé¢„æ¡ˆæéš¾åº”å¯¹</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940769.md#1">ã€æ–°é—»çœ‹ç‚¹ã€‘ç—…æ¯’æ¥è‡ªå“ªé‡Œï¼Ÿå·æ™®ï¼šä¸­ç¾Žéƒ½çŸ¥é“</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11941017.md#1">ã€çŽ°åœºè§†é¢‘ã€‘ä¸œèŽžè™Žé—¨é•‡çŽ°å¤§é‡é˜²æš´è­¦å¯Ÿ</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/11/12/n11650220.htm">ç«çƒŸè¿‡æµ· æ–°è¥¿å…°å¢žæ´¾21åæ¶ˆé˜²å‘˜åŠ©æ¾³ç­ç«</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/19/11/12/n11650220.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="å…³æ³¨3äº¿äººä¸‰é€€"  alt="å…³æ³¨3äº¿äººä¸‰é€€"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
